--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
         <div class="glass-card p-8 rounded-[2.5rem] w-full max-w-sm animate-in space-y-4">
             <h1 class="text-3xl font-black italic text-center mb-6">Vôlei <span class="text-blue-500">Pro</span></h1>
             <p id="auth-error" class="text-red-400 text-xs text-center hidden font-bold"></p>
+            
+            <button onclick="loginComGoogle()" class="ios-btn w-full bg-white text-black py-4 rounded-2xl font-black uppercase tracking-widest text-xs shadow-lg shadow-white/10 flex items-center justify-center gap-3">
+                <i class="fab fa-google text-red-500 text-base"></i> Entrar com Google
+            </button>
+
+            <div class="flex items-center gap-2 my-4 opacity-30 text-[9px] font-bold uppercase tracking-widest justify-center">
+                <hr class="w-10 border-white/20"><span>Ou use e-mail</span><hr class="w-10 border-white/20">
+            </div>
+
             <input type="email" id="emailInput" class="glass-input text-sm" placeholder="Seu E-mail">
             <input type="password" id="passInput" class="glass-input text-sm" placeholder="Senha">
-            <button onclick="fazerLogin()" class="ios-btn w-full bg-blue-600 text-white py-4 rounded-2xl font-black uppercase tracking-widest text-xs shadow-lg shadow-blue-500/30">Entrar</button>
-            <button onclick="criarConta()" class="ios-btn w-full bg-white/10 text-white py-4 rounded-2xl font-black uppercase tracking-widest text-xs border border-white/20 mt-2">Criar Conta</button>
+            <div class="flex gap-2">
+                <button onclick="fazerLogin()" class="ios-btn flex-1 bg-blue-600 text-white py-4 rounded-2xl font-black uppercase tracking-widest text-[10px] shadow-lg shadow-blue-500/30">Entrar</button>
+                <button onclick="criarConta()" class="ios-btn flex-1 bg-white/10 text-white py-4 rounded-2xl font-black uppercase tracking-widest text-[10px] border border-white/20">Criar Conta</button>
+            </div>
         </div>
     </div>
 
@@ -161,7 +172,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, collection, addDoc, onSnapshot, doc, updateDoc, deleteDoc, query, orderBy, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+        import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, onAuthStateChanged, signOut, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
         const firebaseConfig = {
             apiKey: "AIzaSyDxQThqrjNEXmmpreEQwRBaihTAIpoZaAM",
@@ -175,6 +186,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
         const auth = getAuth(app);
+        const googleProvider = new GoogleAuthProvider();
         
         const colJogadores = collection(db, "jogadores");
         const colHistorico = collection(db, "historico");
@@ -202,6 +214,13 @@
             createUserWithEmailAndPassword(auth, e, p).catch(err => alert(err.message));
         };
 
+        window.loginComGoogle = () => {
+            signInWithPopup(auth, googleProvider).catch(err => {
+                document.getElementById('auth-error').innerText = "Erro no Google Login: " + err.message;
+                document.getElementById('auth-error').classList.remove('hidden');
+            });
+        };
+
         window.sair = () => signOut(auth);
 
         // Ouve mudanças de login
@@ -220,7 +239,11 @@
                     document.getElementById('perfilNivel').value = perfilAtual.nivel;
                 } else {
                     // Sem perfil ainda, forçar ir para a aba Perfil
-                    alert("Bem-vindo! Por favor, preencha o seu perfil para começar.");
+                    // Se a pessoa entrou com o Google, tentamos usar o nome do Google como padrão no input
+                    if(user.displayName) {
+                        document.getElementById('perfilNome').value = user.displayName;
+                    }
+                    alert("Bem-vindo! Por favor, confirme seu nome e preencha seu nível para começar.");
                     mudarAba('perfil');
                 }
             } else {
