--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 document.getElementById('main-app').classList.remove('hidden');
                 
                 // Mostrar botão painel se for Admin
-                if(user.email === EMAIL_ADMIN) document.getElementById('btnAdmin').classList.remove('hidden');
+                if(jhonata_hip.hop@hotmail.com === EMAIL_ADMIN) document.getElementById('btnAdmin').classList.remove('hidden');
 
                 await window.carregarPerfil();
             } else {
@@ -570,3 +570,4 @@
     </script>
 </body>
 </html>
+
